--- a/app/views/routes/location2.html.erb
+++ b/app/views/routes/location2.html.erb
@@ -2,21 +2,34 @@
 <html>
 <head>
   <title>Location2</title>
-  <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.4.1.min.js"></script>
 </head>
 <body>
+<script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.4.1.min.js"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry"></script>
 
 <script>
-
   window.lat; 
   window.lng;
   var lineCoords = [];
   var map;
+  var directionsDisplay;
+  var directionsService;
+  var current_route_id = document.getElementById("currentRoute").innerHTML;
   var currentLocation;
   var pnChannel = "eXMapp";
   var pubnub = new PubNub({
     publishKey: "<%= ENV['API_HOST_PUBNUB_PUBLISH_KEY'] %>",
     subscribeKey: "<%= ENV['API_HOST_PUBNUB_SUBSCRIBE_KEY'] %>"
+  });
+         
+  pubnub.addListener({
+    message: function(message) {
+      redraw(message);
+    }
+  });
+
+  pubnub.subscribe({
+    channels: [pnChannel]
   });
 
   document.getElementById('travel_mode').addEventListener('change', function () {
@@ -42,128 +55,127 @@
       
   });      
 
+  document.getElementById('travel_mode').addEventListener('change', function() {
+    if (document.getElementById('reverse').style.display === 'inline') {
+      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+        var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+        
+        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+      });
+    } else {
+      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+        var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        
+        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+      });
+    };
+    
+  });
+
+  document.getElementById('transit_mode').addEventListener('change', function() { 
+    if (document.getElementById('reverse').style.display === 'inline') {
+      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+        var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+        
+        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+      });
+    } else {
+      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+        var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        
+        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+      });
+    };
+  });
+
   function initialize() {
-    var current_route_id = document.getElementById("currentRoute").innerHTML;
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 39.8, lng: -98.7129},
+      
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 39.8, lng: -98.7129 },
       zoom: 5,
+      maptypeId: 'roadmap',
       fullscreenControl: true,
       zoomControl: true,
       mapTypeControl: false,
       streetViewControl: false,
       scrollwheel: false,
       styles: [{ 
-                  "featureType": "all", 
-                  "elementType": "all", 
-                  "stylers": [ { "invert_lightness": true }, { "saturation": 10 }, { "lightness": 30 }, { "gamma": 0.5 }, { "hue": "#435158" } ] 
+                "featureType": "all", 
+                "elementType": "all", 
+                "stylers": [ { "invert_lightness": true }, { "saturation": 10 }, { "lightness": 30 }, { "gamma": 0.5 }, { "hue": "#435158" } ] 
               }]
     });
-    
-    var directionsService = new google.maps.DirectionsService;
-    var directionsDisplay = new google.maps.DirectionsRenderer({
+    directionsDisplay = new google.maps.DirectionsRenderer({
       map: map,
       panel: document.getElementById('directions_panel')
     });
+
+    directionsService = new google.maps.DirectionsService;
     directionsDisplay.setMap(map);
-
-    document.getElementById('travel_mode').addEventListener('change', function() {
-      if (document.getElementById('reverse').style.display === 'inline') {
-        $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-          var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-          var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-        
-          determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-        });
-      } else {
-        $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-          var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-          var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-          
-          determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-        });
-      };
-      
-    });
-
-    document.getElementById('transit_mode').addEventListener('change', function() { 
-      if (document.getElementById('reverse').style.display === 'inline') {
-        $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-          var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-          var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-          
-          determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-        });
-      } else {
-        $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-          var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-          var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-          
-          determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-        });
-      };
-        
-    });
-
-    google.maps.event.addDomListener(window, 'resize', function() {
-        var center = map.getCenter();
-        google.maps.event.trigger(map, "resize");
-        map.setCenter(center);
-    });
-
-    $("#start").click(function(){
-
-      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-        var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-        var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-        
-        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-      }); 
-
-      function findCurrentPosition() {
-
-        navigator.geolocation.getCurrentPosition(function(position) {
-          lat = position.coords.latitude;
-          lng = position.coords.longitude;
-
-          currentLocation = new google.maps.Marker({
-            position: {lat:lat, lng:lng}, 
-            map:map
-          });
-          
-        });
-
-      };
-      findCurrentPosition();
-
-    });
-
-    $("#reverse").click(function(){
-      
-      var current_route_id = document.getElementById("currentRoute").innerHTML;   
-      function reverseRoute() {
-        $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-          var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-          var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
-          
-          determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
-        });
-        
-      };
-      reverseRoute();
-    });
-
-    $("#end").click(function(){
-
-      if (directionsDisplay != null) {
-        directionsDisplay.setMap(null);
-        directionsDisplay = null;
-        document.getElementById('directions_panel').innerHTML = "";
-      };
-
-
-    });
   };
 
+  google.maps.event.addDomListener(window, "load", initialize);
+
+  google.maps.event.addDomListener(window, 'resize', function() {
+    var center = map.getCenter();
+    google.maps.event.trigger(map, "resize");
+    map.setCenter(center);
+  });
+
+  $("#start").click(function(){
+    $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+      var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+      var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+       
+      determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+    }); 
+    function findCurrentPosition() {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        lat = position.coords.latitude;
+        lng = position.coords.longitude;
+        currentLocation = new google.maps.Marker({
+          position: {lat:lat, lng:lng}, 
+          map:map
+        });
+         
+      });
+    };
+    findCurrentPosition();
+    setInterval(function(){
+      storePosition(getLocation());
+    }, 5000);
+  });
+
+  $("#reverse").click(function(){
+    
+    var current_route_id = document.getElementById("currentRoute").innerHTML; 
+
+    function reverseRoute() {
+      $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+        var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        
+        determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
+      });
+      
+    };
+    reverseRoute();
+  });
+
+  $("#end").click(function(){
+
+    if (directionsDisplay != null) {
+      directionsDisplay.setMap(null);
+      directionsDisplay = null;
+      document.getElementById('directions_panel').innerHTML = "";
+    };
+
+  });
+  
   function determineRoute(directionsService, directionsDisplay, startPoint, endPoint) {
     var selectedTravelMode = document.getElementById('travel_mode').value;
     var selectedTransitMode = document.getElementById('transit_mode').value;
@@ -174,7 +186,6 @@
       transitOptions: {
         modes: [selectedTransitMode]
       }
-
     }, function(response, status) {
       if (status === 'OK') {
         directionsDisplay.setDirections(response);
@@ -185,6 +196,7 @@
   };
 
   var redraw = function(message) {
+    console.log(message);
     lat = parseFloat(message["message"]["lat"]);
     lng = parseFloat(message["message"]["lng"]);
     currentLocation.setPosition({lat:lat, lng:lng});
@@ -215,14 +227,6 @@
       console.log("Location unavailable");
     }
   }
-      
-  setInterval(function(){
-    storePosition(getLocation());
-  }, 5000);
-
-
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&callback=initialize"></script>
   </body>
 </html>
-    
