--- a/app/views/markers/new.html.erb
+++ b/app/views/markers/new.html.erb
@@ -3,21 +3,15 @@
   <br>
   <div>
     <div>
-      <label>Nickname:</label> <input type="text" id="nickname">
+      <label>Nickname:</label> <input type="text" id="nickname" placeholder="E.g. Work">
     </div>
     <div id="breaks"></div>
     <div>
-      <label>Address Line 1:</label> <input type="text" id="address_line1">
-    </div>
-    <div id="address_info1">
-      Street Address
+      <label>Address:</label> <input type="text" placeholder="Street Address">
     </div>
     <div id="breaks"></div>
     <div>
-      <label>Address Line 2:</label> <input type="text" id="address_line2">
-    </div>
-    <div id="address_info2">
-      City, State, Zip, etc.
+      <label>City/State/Zip:</label> <input type="text" placeholder="City, State, Zip, etc.">
     </div>
     
   </div>
