--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
             </select>
           
           <% end %>
-          <% if current_user %>
+  
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -64,19 +64,24 @@
             </button>
           </div>
         
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <% if current_user && !current_page?('/markers/new') %>
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-right">  
+              <% if current_user && !current_page?('/markers/new') %>
                 <li><%= link_to "Add Destination", "/markers/new"%></li>
+              <% end %>
+              <% if current_user && !current_page?('/location') %>
                 <li><%= link_to "Polyline", "/location" %></li>
+              <% end %>
+              <% if current_user && !current_page?('/location2') %>
                 <li><%= link_to "Current Location", "/location2" %></li>
+              <% end %>
+              <% if current_user %>
                 <li><a href="/logout">Log Out</a></li>
-                
-            <% end %>
+              <% end %>
             
           </ul>
         </div>
-        <% end %>
+        
       </div>
     </nav>
     <% if current_user && current_page?('/') || current_page?('/location') || current_page?('/location2') %>
